# HSM-C

./: CMakeLists.txt  Makefile  README  README.md  input.txt
lib/: Makefile  acceptvalues.c  alloc_space.c  alloc_space.h  ceigs.c  cfeigs.c  cheader.h  clinalg.c  clinalg.h  complex.c  complex.h  constants.h  convert_xy_rt.c  convert_xy_rt.h  dalloc.c  dalloc.h  data_structures.c.c  dcovsrt.c  dfpoly.c  dgaussj.c  differentiate.c  differentiate.h  dlfit.c  eigenvalues.c  eigenvalues.h  fft2D.c  fft2D.h  fft3D.c  fft3D.h  get_dmatrix_average.c  get_dmatrix_average.h  ialloc.c  ialloc.h  integrate.c  integrate.h  interpolate.c  interpolate.h  linalg.c  linalg.h  macros.h  (+49 more)
lib/bessel/: bessel.tar
src/: CMakeLists.txt  damping.c  damping.h  divergence.c  divergence.h  eis3.1  getdata.c  getdata.h  header.h  hybrid.c  hybrid.h  input.h  lsm-hres.nc  lsm.c  lsm.h  main.c  readtxt.c  readtxt.h  save.c  save.h  solveode.c  solveode.h  wavelength.c  wavelength.h
static/: park_et_al.nc
test/: mldtest.py
